Revert "[FE] fix container auto overflow"
This reverts commit 1b483f46de53bc98cba46982f9c194f25fa911e2.

--- a/asset-management-fe/src/index.css
+++ b/asset-management-fe/src/index.css
@@ -11,5 +11,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-html, body {margin: 0; height: 100%; overflow: auto}
-div{overflow: hidden}
+html, body {margin: 0; height: 100%; overflow: hidden}
